// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`A Chord Progression test suite > should generate chords based on a movement timeline - free rhythm 1`] = `
[
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 960,
    "isRest": false,
    "next": 960,
    "time": 0,
  },
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "isRest": false,
    "next": 1440,
    "time": 960,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "isRest": false,
    "next": 1920,
    "time": 1440,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 960,
    "isRest": false,
    "next": 2880,
    "time": 1920,
  },
  {
    "chord": [
      71,
      76,
      78,
    ],
    "chordName": "Esus2",
    "dur": 480,
    "isRest": false,
    "next": 3360,
    "time": 2880,
  },
  {
    "chord": [
      71,
      76,
      78,
    ],
    "chordName": "Esus2",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3360,
  },
  {
    "chord": [
      71,
      76,
      80,
    ],
    "chordName": "Emaj",
    "dur": 480,
    "isRest": false,
    "next": 4320,
    "time": 3840,
  },
  {
    "chord": [
      71,
      76,
      80,
    ],
    "chordName": "Emaj",
    "dur": 960,
    "isRest": false,
    "next": 5280,
    "time": 4320,
  },
  {
    "chord": [
      64,
      71,
      75,
      80,
    ],
    "chordName": "EM7",
    "dur": 960,
    "isRest": false,
    "next": 6240,
    "time": 5280,
  },
  {
    "chord": [
      64,
      71,
      75,
      80,
    ],
    "chordName": "EM7",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6240,
  },
  {
    "chord": [
      73,
      75,
      80,
    ],
    "chordName": "C#sus2",
    "dur": 480,
    "isRest": false,
    "next": 7200,
    "time": 6720,
  },
  {
    "chord": [
      73,
      75,
      80,
    ],
    "chordName": "C#sus2",
    "dur": 480,
    "isRest": false,
    "next": 7680,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite > should generate chords based on a movement timeline - turn rhythm 1`] = `
[
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 160,
    "isRest": false,
    "next": 160,
    "time": 0,
  },
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 80,
    "isRest": false,
    "next": 240,
    "time": 160,
  },
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 720,
    "isRest": false,
    "next": 960,
    "time": 240,
  },
  {
    "chord": [
      69,
      74,
      76,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "isRest": false,
    "next": 1440,
    "time": 960,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 320,
    "isRest": false,
    "next": 1760,
    "time": 1440,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "isRest": false,
    "next": 2240,
    "time": 1760,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 480,
    "isRest": false,
    "next": 2720,
    "time": 2240,
  },
  {
    "chord": [
      71,
      73,
      78,
    ],
    "chordName": "Bsus2",
    "dur": 160,
    "isRest": false,
    "next": 2880,
    "time": 2720,
  },
  {
    "chord": [
      71,
      73,
      76,
      80,
    ],
    "chordName": "E6",
    "dur": 160,
    "isRest": false,
    "next": 3040,
    "time": 2880,
  },
  {
    "chord": [],
    "chordName": "",
    "dur": 320,
    "isRest": true,
    "next": 3360,
    "time": 3040,
  },
  {
    "chord": [
      71,
      73,
      76,
      80,
    ],
    "chordName": "E6",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3360,
  },
  {
    "chord": [
      71,
      76,
    ],
    "chordName": "E5",
    "dur": 240,
    "isRest": false,
    "next": 4080,
    "time": 3840,
  },
  {
    "chord": [
      71,
      76,
    ],
    "chordName": "E5",
    "dur": 240,
    "isRest": false,
    "next": 4320,
    "time": 4080,
  },
  {
    "chord": [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 4560,
    "time": 4320,
  },
  {
    "chord": [
      71,
      76,
    ],
    "chordName": "E5",
    "dur": 720,
    "isRest": false,
    "next": 5280,
    "time": 4560,
  },
  {
    "chord": [
      68,
      71,
      76,
    ],
    "chordName": "Emaj",
    "dur": 160,
    "isRest": false,
    "next": 5440,
    "time": 5280,
  },
  {
    "chord": [
      68,
      71,
      76,
    ],
    "chordName": "Emaj",
    "dur": 320,
    "isRest": false,
    "next": 5760,
    "time": 5440,
  },
  {
    "chord": [
      68,
      71,
      76,
    ],
    "chordName": "Emaj",
    "dur": 240,
    "isRest": false,
    "next": 6000,
    "time": 5760,
  },
  {
    "chord": [
      68,
      71,
      76,
    ],
    "chordName": "Emaj",
    "dur": 720,
    "isRest": false,
    "next": 6720,
    "time": 6000,
  },
  {
    "chord": [
      68,
      71,
      73,
      76,
    ],
    "chordName": "C#m7",
    "dur": 160,
    "isRest": false,
    "next": 6880,
    "time": 6720,
  },
  {
    "chord": [
      68,
      71,
      73,
      76,
    ],
    "chordName": "C#m7",
    "dur": 320,
    "isRest": false,
    "next": 7200,
    "time": 6880,
  },
  {
    "chord": [
      68,
      71,
      73,
      76,
    ],
    "chordName": "C#m7",
    "dur": 480,
    "isRest": false,
    "next": 7680,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite > should generate progression with defined structures 1`] = `
[
  {
    "chord": [
      73,
      82,
      80,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 320,
    "time": 0,
  },
  {
    "chord": [
      73,
      82,
      80,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 640,
    "time": 320,
  },
  {
    "chord": [
      73,
      82,
      80,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 960,
    "time": 640,
  },
  {
    "chord": [
      75,
      78,
      84,
    ],
    "chordName": "Ebm6",
    "dur": 480,
    "isRest": false,
    "next": 1280,
    "time": 960,
  },
  {
    "chord": [
      75,
      78,
      84,
    ],
    "chordName": "Ebm6",
    "dur": 480,
    "isRest": false,
    "next": 1600,
    "time": 1280,
  },
  {
    "chord": [
      75,
      78,
      84,
    ],
    "chordName": "Ebm6",
    "dur": 480,
    "isRest": false,
    "next": 1920,
    "time": 1600,
  },
  {
    "chord": [
      56,
      65,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 2240,
    "time": 1920,
  },
  {
    "chord": [
      56,
      65,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 2560,
    "time": 2240,
  },
  {
    "chord": [
      56,
      65,
    ],
    "chordName": "Ab6",
    "dur": 480,
    "isRest": false,
    "next": 2880,
    "time": 2560,
  },
  {
    "chord": [
      75,
      82,
    ],
    "chordName": "Eb6",
    "dur": 480,
    "isRest": false,
    "next": 3360,
    "time": 2880,
  },
  {
    "chord": [
      75,
      82,
    ],
    "chordName": "Eb6",
    "dur": 480,
    "isRest": false,
    "next": 3840,
    "time": 3360,
  },
  {
    "chord": [
      49,
      61,
      65,
      58,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 4160,
    "time": 3840,
  },
  {
    "chord": [
      49,
      61,
      65,
      58,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 4480,
    "time": 4160,
  },
  {
    "chord": [
      49,
      61,
      65,
      58,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4480,
  },
  {
    "chord": [
      73,
      80,
      77,
      82,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 5120,
    "time": 4800,
  },
  {
    "chord": [
      73,
      80,
      77,
      82,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 5440,
    "time": 5120,
  },
  {
    "chord": [
      73,
      80,
      77,
      82,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 5760,
    "time": 5440,
  },
  {
    "chord": [
      73,
      77,
      80,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 6240,
    "time": 5760,
  },
  {
    "chord": [
      73,
      77,
      80,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6240,
  },
  {
    "chord": [
      49,
      58,
      56,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 7040,
    "time": 6720,
  },
  {
    "chord": [
      49,
      58,
      56,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 7360,
    "time": 7040,
  },
  {
    "chord": [
      49,
      58,
      56,
    ],
    "chordName": "Db6",
    "dur": 480,
    "isRest": false,
    "next": 7840,
    "time": 7360,
  },
]
`;
